# smolvlm_rust

./: .gitignore  Cargo.toml  compare_outputs.py  test_image_processor.py
.cargo/: config.toml
src/: image_processor.rs  main.rs  tests.rs
